--- a/WebApplication1/Styles/StyleSheetPocetna.css
+++ b/WebApplication1/Styles/StyleSheetPocetna.css
@@ -16,3 +16,10 @@
 td, th {
     width: 100%;
 }
+
+.carouselButton {
+    border: none;
+    background: transparent;
+    font-size: 20px;
+    color: #F0CB01;
+}
